RTSDK-10941 Remove JavaFX dependency from general EMAJ Examples